<resources>
    <string name="app_name">Movie Zone</string>
    <string name="SignIn">Sign In</string>
    <string name="user_email">Email</string>

    <string name="notRegistered">don\'t have a account?</string>
    <string name="signup">SIGN UP</string>
    <string name="password">Password</string>
    <string name="forgetPasswprd">Forget Passwprd</string>
    <string name="Movies">Movies</string>
    <string name="Trending">Trending</string>
    <string name="googleFaild">Sorry..your email or password incorrect</string>
    <string name="loginSuccess">login success</string>
    <string name="loginErrorEmail">The email is empty </string>
    <string name="loginErrorEmailFiled">Enter a valid email </string>
    <string name="loginErrorPassword">The password is empty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">search</string>
    <string name="navigation">navigation</string>
    <string name="review">Review</string>
    <string name="starCast">Star cast</string>
</resources>