<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
<variable
    name="viewModel"
    type="com.movieapp.razan.login.viewModel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".LoginActivity">


        <com.github.siyamed.shapeimageview.mask.PorterShapeImageView
            android:layout_width="258.18dp"
            android:layout_height="279.46dp"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="false"
            android:cropToPadding="true"
            android:src="@drawable/rrrr"
            android:translationX="55dp"
            android:translationY="55dp"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.271"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:siShape="@drawable/rrrr"
            app:siSquare="false" />


        <com.github.siyamed.shapeimageview.mask.PorterShapeImageView
            android:layout_width="266.54dp"
            android:layout_height="270.79dp"
            android:src="@drawable/h"
            android:translationX="-25dp"
            android:translationY="-25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.567"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.594"
            app:siShape="@drawable/h"
            app:siSquare="false" />

        <com.github.siyamed.shapeimageview.CircularImageView
            android:layout_width="183dp"
            android:layout_height="183dp"
            android:src="@drawable/main"
            android:translationX="24dp"
            android:translationY="24dp"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="88dp"
            android:layout_marginTop="128dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_circle" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_circle" />

        <TextView
            android:id="@+id/tv_signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="39dp"
            android:layout_marginTop="164dp"
            android:layout_marginEnd="39dp"
            android:gravity="center_horizontal"
            android:letterSpacing="0.05"
            android:lineSpacingExtra="8sp"
            android:text="@string/SignIn"
            android:textAllCaps="false"
            android:textColor="#292b3a"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.548"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Sign In" />

        <EditText
            android:id="@+id/ed_enter_user_name"
            style="@style/myEditText"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="39dp"
            android:drawableStart="@drawable/ic_user_one"
            android:hint="@string/user_email"
            android:inputType="textEmailAddress"
            android:shadowColor="#717070"
            android:textColorHint="#707070"
           app:addTextChangedListener="@{viewModel.getEmail}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_signIn" />

        <EditText
            android:id="@+id/ed_enter_password"
            style="@style/myEditText"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/ic_lock_one"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:shadowColor="#FF717070"
            android:textColorHint="#707070"
            app:addTextChangedListener="@{viewModel.getPassword}"
            app:layout_constraintEnd_toEndOf="@id/ed_enter_user_name"
            app:layout_constraintStart_toStartOf="@+id/ed_enter_user_name"
            app:layout_constraintTop_toBottomOf="@id/ed_enter_user_name" />


        <Button
            android:id="@+id/bn_signIn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="#fac800"
            android:shadowColor="#8C8C8C"
            android:text="@string/SignIn"
            android:onClick="@{viewModel::onLogincliked}"
            app:layout_constraintEnd_toEndOf="@id/ed_enter_user_name"
            app:layout_constraintStart_toStartOf="@+id/ed_enter_user_name"
            app:layout_constraintTop_toBottomOf="@id/ed_enter_password" />

        <TextView
            android:id="@+id/tv_forgetPasswprd"
            style="@style/myTextViewofSignin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:letterSpacing="0.05"
            android:lineSpacingExtra="8sp"
            android:text="@string/forgetPasswprd"
            android:textAllCaps="false"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"
            android:textColor="@color/colorText"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="@id/tv_signIn"
            app:layout_constraintHorizontal_bias="0.548"
            app:layout_constraintStart_toStartOf="@id/tv_signIn"
            app:layout_constraintTop_toBottomOf="@id/bn_signIn" />

        <TextView
            android:id="@+id/tv_not_registered"
            style="@style/myTextView"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginTop="42dp"
            android:text="@string/notRegistered"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@id/tv_singup"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="@id/tv_forgetPasswprd"
            app:layout_constraintTop_toBottomOf="@id/tv_forgetPasswprd" />

        <TextView
            android:id="@+id/tv_singup"
            style="@style/myTextViewofSignin"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginTop="42dp"
            android:layout_marginStart="10dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:text="@string/signup"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/tv_forgetPasswprd"
            app:layout_constraintStart_toEndOf="@id/tv_not_registered"
            app:layout_constraintTop_toBottomOf="@id/tv_forgetPasswprd" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>